# fin-stats

./: README.md  pyproject.toml
fin_stats/: main.py
